--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,21 @@
-<h1>Welcome to the Home Page</h1>
+<div class="container mt-4" style="background-image: url('blog.png'); background-size: cover; background-position: center; padding: 20px; border-radius: 8px;">
+  
+  <div class="p-5 mb-4 mt-4 rounded-3">
+    
+    <div class="container-fluid py-5 d-flex flex-column mb-3">
+      
+      <h1 class="display-5 fw-bold d-flex justify-content-center text-white">Welcome to the Alpha Blog</h1>
+      <p class="fs-4 d-flex justify-content-center text-white">Etiam non dolor sit amet sapien porttitor fringilla.</p>
+      <p class="fs-4 d-flex justify-content-center text-white">Vestibulum ac orci ligula. Morbi eros magna, interdum sed ante eu, placerat iaculis turpis.</p>
+      
+    </div>
 
-<%= link_to 'Go to articles', articles_path%> |
+    <div class="d-flex justify-content-center">
 
-<%= link_to 'Go to the about page', about_path%>
+      <button class=" btn btn-outline-warning btn-lg" type="button">Sign Up!</button> 
+    </div>
+  </div>
+
+  <!--  <%= link_to 'Go to articles', articles_path %> |
+  <%= link_to 'Go to the about page', about_path %> -->
+</div>
