--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -19,7 +19,7 @@
     <%= form.text_area :description, class: 'form-control' %>
   </div>
 
-  <p><%= form.submit  %></p>
+  <p><%= form.submit 'Save', class: 'btn btn-primary' %></p>
 <% end %>
 
 </div>
