--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -9,6 +9,7 @@
       <tr>
         <th scope="col">Title</th>
         <th scope="col">Description</th>
+        <th scope="col">By</th>
         <th scope="col" colspan="3">Actions</th>
       </tr>
     </thead>
@@ -17,6 +18,7 @@
       <tr>
         <td><%= article.title%></td>
         <td class=" text-truncate" style="max-width: 150px;" ><%= article.description %></td>
+        <td><%= article.user.username if article.user %></td>
         <td><%= link_to 'Show', article_path(article), class: 'btn btn-secondary' %></td>
         <td><%= link_to 'Edit', edit_article_path(article), class: 'btn btn-info'%></td>
         <td><%= link_to 'Delete', article_path(article), class: 'btn btn-danger', data: { turbo_method: :delete, turbo_confirm: "Are you sure?" } %></td>
