--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,6 +4,8 @@
     <div class="card-header">
       Article #<%= @article.id %>
     </div>
+    <h6 class="card-subtitle my-2 text-body-secondary fst-italic">By <%= @article.user.username if @article.user%></h6>
+    
     <div class="card-body">
       <h5 class="card-title"><%= @article.title %></h5>
       <p class="card-text"><%= @article.description %></p>
