--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,12 +1,6 @@
 <div class="container">
-  <% if @article.errors.any? %>
-  <h2> The following errors prevented the article from being saved </h2>
-  <ul>
-  <% @article.errors.full_messages.each do |error_msg| %>
-    <li style="color: red" ><%= error_msg %></li>
-  <% end %>
-  </ul>
-<% end %>
+  
+<%= render 'shared/errors', obj: @article %>
 
 <%= form_with model: @article do |form| %>
   <div class="mb-3">
