--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,8 +11,7 @@
     </div>
 
     <div class="d-flex justify-content-center">
-
-      <button class=" btn btn-outline-warning btn-lg" type="button">Sign Up!</button> 
+      <%= link_to "Sign up!", signup_path, class: "btn btn-outline-warning btn-lg" %>
     </div>
   </div>
 
