--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -18,7 +18,7 @@
     <%= form.password_field :password, class: 'form-control', placeholder: 'Enter your password' %>
   </div>
 
-  <p><%= form.submit 'Sign Up', class: 'btn btn-primary' %></p>
+  <p><%= form.submit(@user.new_record? ? 'Sign Up' : "Update account", class: 'btn btn-primary') %></p>
 <% end %>
 
 </div>
