--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -18,7 +18,7 @@
       <tr>
         <td><%= article.title%></td>
         <td class=" text-truncate" style="max-width: 150px;" ><%= article.description %></td>
-        <td><%= article.user.username if article.user %></td>
+        <td><%= link_to article.user.username, user_path(article.user) if article.user %></td>
         <td><%= link_to 'Show', article_path(article), class: 'btn btn-secondary' %></td>
         <td><%= link_to 'Edit', edit_article_path(article), class: 'btn btn-info'%></td>
         <td><%= link_to 'Delete', article_path(article), class: 'btn btn-danger', data: { turbo_method: :delete, turbo_confirm: "Are you sure?" } %></td>
