--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,7 +5,11 @@
       Article #<%= @article.id %>
     </div>
     <h6 class="card-subtitle my-2 text-body-secondary fst-italic">By <%= @article.user.username if @article.user%></h6>
-    
+    <div class="text-center">
+      <%= link_to user_path(@article.user) do %>
+        <%= image_tag('/giphy.webp', alt: 'giphy', class: 'shadow rounded-circle ', height: '60', width: '60')%>
+      <% end %>
+    </div>
     <div class="card-body">
       <h5 class="card-title"><%= @article.title %></h5>
       <p class="card-text"><%= @article.description %></p>
