--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -11,6 +11,7 @@
       <div class="navbar-nav">
         <%= link_to 'Home', root_path, class: 'nav-link active'%>
         <%= link_to 'About', about_path, class: 'nav-link' %>
+        <%= link_to 'Users', users_path, class: 'nav-link' %>
         <%= link_to 'Articles', articles_path, class: 'nav-link' %>
       </div>
     </div>
