--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,7 +1,8 @@
-<% obj.each do |article| %>
+
+<% @articles.each do |article| %>
   <div class="row">
     <div class="col-xs-8 col-xs-offset-2">
-      <div class="card text-center shadow mb-5 bg-white rounded">
+      <div class="card text-center shadow mb-4 bg-white rounded">
         <div class="card-header font-italic">
           by <%= article.user.username if article.user %>
         </div>
@@ -21,5 +22,6 @@
        
       </div>
     </div>
-  </div>  
+  </div>
 <% end %>
+
