--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,6 +3,7 @@
 
   <p><%= link_to 'Create New Article', new_article_path, class: 'btn btn-primary' %></p>
 
+  
   <table class="table table-hover">
 
     <thead>
@@ -26,6 +27,11 @@
       <% end %>
     </tbody>
   </table>
+
+  
+  <div class="flickr_pagination">
+    <%= will_paginate  @articles, :container => false %>
+  </div>
 
   <p><%= link_to 'Go to the home page', root_path, class: 'btn btn-secondary'  %></p>
 </div>
