--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,11 +2,15 @@
   <div class="text-center"> 
     <h1>Alpha Bloggers</h1>
   </div>
-  
+
+  <div class="flickr_pagination mt-4 mb-2">
+    <%= will_paginate  @users, :container => false %>
+  </div>
+
   <% @users.each do |user| %>
   <div class="row">
     <div class="col-xs-8 col-xs-offset-2">
-      <div class="card text-center shadow mb-5 bg-white rounded">
+      <div class="card text-center shadow mb-4 bg-white rounded">
         <div class="card-header font-italic">
             <%= link_to user.username, user %>
         </div>
@@ -29,6 +33,10 @@
     </div>
   </div>  
 <% end %>
+
+<div class="flickr_pagination mb-4">
+  <%= will_paginate  @users, :container => false %>
+</div>
   
  
 </div>
