--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,8 +17,16 @@
     <h3>Articles</h3>
   </div>
 
+  <div class="flickr_pagination my-4">
+    <%= will_paginate  @articles, :container => false %>
+  </div>  
+
   <div class="text-center">
-    <%= render 'articles/article', obj: @user.articles %>
+    <%= render 'articles/article' %>
+  </div>
+
+  <div class="flickr_pagination mb-4">
+    <%= will_paginate  @articles, :container => false %>
   </div>
   
 </div>
