--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -9,9 +9,11 @@
         <div class="card-body">
           <h5 class="card-title"><%= link_to article.title, article_path(article) %></h5>
           <p class="card-text"><%= truncate(article.description, length: 100) %></p>
-          <%= link_to 'Show', article_path(article), class: 'btn btn-secondary btn-sm' %>
-          <%= link_to 'Edit', edit_article_path(article), class: 'btn btn-info btn-sm'%>
-          <%= link_to 'Delete', article_path(article), class: 'btn btn-danger btn-sm', data: { turbo_method: :delete, turbo_confirm: "Are you sure?" } %>
+          <%= link_to 'View', article_path(article), class: 'btn btn-secondary btn-sm' %>
+          <% if logged_in? && article.user == current_user  %>
+            <%= link_to 'Edit', edit_article_path(article), class: 'btn btn-info btn-sm'%>
+            <%= link_to 'Delete', article_path(article), class: 'btn btn-danger btn-sm', data: { turbo_method: :delete, turbo_confirm: "Are you sure?" } %>
+          <% end %>
         </div>
         
         <div class="card-footer text-muted">
