--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,31 +3,11 @@
 
   <p><%= link_to 'Create New Article', new_article_path, class: 'btn btn-primary' %></p>
 
+  <div class="flickr_pagination mb-4">
+    <%= will_paginate  @articles, :container => false %>
+  </div>
   
-  <table class="table table-hover">
-
-    <thead>
-      <tr>
-        <th scope="col">Title</th>
-        <th scope="col">Description</th>
-        <th scope="col">By</th>
-        <th scope="col" colspan="3">Actions</th>
-      </tr>
-    </thead>
-    <tbody>
-       <% @articles.each do |article|%>
-      <tr>
-        <td><%= article.title%></td>
-        <td class=" text-truncate" style="max-width: 150px;" ><%= article.description %></td>
-        <td><%= link_to article.user.username, user_path(article.user) if article.user %></td>
-        <td><%= link_to 'Show', article_path(article), class: 'btn btn-secondary' %></td>
-        <td><%= link_to 'Edit', edit_article_path(article), class: 'btn btn-info'%></td>
-        <td><%= link_to 'Delete', article_path(article), class: 'btn btn-danger', data: { turbo_method: :delete, turbo_confirm: "Are you sure?" } %></td>
-      </tr>
-      <% end %>
-    </tbody>
-  </table>
-
+  <%= render 'article' %>
   
   <div class="flickr_pagination">
     <%= will_paginate  @articles, :container => false %>
