--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,10 +9,52 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
+
+        
         <%= link_to 'Home', root_path, class: 'nav-link active'%>
         <%= link_to 'About', about_path, class: 'nav-link' %>
-        <%= link_to 'Users', users_path, class: 'nav-link' %>
-        <%= link_to 'Articles', articles_path, class: 'nav-link' %>
+        <%= link_to 'Bloggers', users_path, class: 'nav-link' %>
+
+        <div class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Articles
+          </a>
+          <ul class="dropdown-menu">
+            <% if logged_in? %>
+              <li> <%= link_to 'Create new articles', new_article_path, class: ' dropdown-item' %></li>
+            <% end %>
+            <li> <%= link_to 'View articles', articles_path, class: ' dropdown-item' %></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
+        </div>
+        
+       
+        
+
+        <% if logged_in? %>
+        <div class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Profile [<%= current_user.username %>]
+          </a>
+          <ul class="dropdown-menu">
+           
+            <li> <%= link_to 'View your profile', user_path(current_user), class: ' dropdown-item' %></li>
+            <li> <%= link_to 'Edit your profile', edit_user_path(current_user), class: ' dropdown-item' %></li>
+            
+            
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
+        </div>
+
+         
+          <%= link_to 'Logout', logout_path, class: 'nav-link', method: :delete %>
+        <% else %>
+            <%= link_to 'Login', login_path, class: 'nav-link' %>
+            <%= link_to 'Sign up', signup_path, class: 'nav-link' %>
+        <% end %>
+        
       </div>
     </div>
 
