--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -22,7 +22,9 @@
           </h5>
           <p class="card-text"><%= pluralize(user.articles.count, "article") %></p>
           <%= link_to 'View Profile', user, class: 'btn btn-secondary btn-sm'%>
-          <%= link_to 'Edit Profile', edit_user_path(user), class: 'btn btn-info btn-sm'%>
+          <% if logged_in? && user == current_user %>
+            <%= link_to 'Edit Profile', edit_user_path(user), class: 'btn btn-info btn-sm'%>
+          <% end %>
         </div>
         
         <div class="card-footer text-muted">
