--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,7 +9,9 @@
     </div>
   
     <div class="text-center my-4">
-      <%= link_to 'Edit your profile', edit_user_path(@user), class: 'btn btn-secondary btn-sm' %>
+      <% if logged_in? && @user == current_user %>
+        <%= link_to 'Edit your profile', edit_user_path(@user), class: 'btn btn-secondary btn-sm' %>
+      <% end %>
     </div>
   </div>
 
