--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,8 +9,6 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-
-        
         <%= link_to 'Home', root_path, class: 'nav-link active'%>
         <%= link_to 'About', about_path, class: 'nav-link' %>
         <%= link_to 'Bloggers', users_path, class: 'nav-link' %>
@@ -28,28 +26,25 @@
             <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
         </div>
-        
-       
-        
 
         <% if logged_in? %>
-        <div class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Profile [<%= current_user.username %>]
-          </a>
-          <ul class="dropdown-menu">
-           
-            <li> <%= link_to 'View your profile', user_path(current_user), class: ' dropdown-item' %></li>
-            <li> <%= link_to 'Edit your profile', edit_user_path(current_user), class: ' dropdown-item' %></li>
+          <div class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Profile [<%= current_user.username %>]
+            </a>
+            <ul class="dropdown-menu">
             
-            
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </div>
+              <li> <%= link_to 'View your profile', user_path(current_user), class: 'dropdown-item' %></li>
+              <li> <%= link_to 'Edit your profile', edit_user_path(current_user), class: 'dropdown-item' %></li>
+              <li> <%= link_to 'Delete your profile', user_path(current_user), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class: 'dropdown-item text-danger'  %> </li>
 
-         
-          <%= link_to 'Logout', logout_path, class: 'nav-link', method: :delete %>
+
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+          </div>
+
+          <%= link_to 'Logout', logout_path, method: :delete, class: 'nav-link'  %>
         <% else %>
             <%= link_to 'Login', login_path, class: 'nav-link' %>
             <%= link_to 'Sign up', signup_path, class: 'nav-link' %>
