--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,8 +1,10 @@
 <% if obj.errors.any? %>
-  <h2> The following errors prevented the <%= obj.class.name.downcase %> from being saved </h2>
-  <ul>
-  <% obj.errors.full_messages.each do |error_msg| %>
-    <li style="color: red" ><%= error_msg %></li>
-  <% end %>
-  </ul>
+  <div class="alert">
+    <h2> The following errors prevented the <%= obj.class.name.downcase %> from being saved </h2>
+    <ul>
+    <% obj.errors.full_messages.each do |error_msg| %>
+      <li style="color: red" ><%= error_msg %></li>
+    <% end %>
+    </ul>
+  </div>
 <% end %>
