--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -5,7 +5,16 @@
       <div class="card text-center shadow mb-4 bg-white rounded">
         <div class="card-header font-italic">
           by <%= article.user.username if article.user %>
+
+          <% if article.categories.any?%>
+            <div class="text-center ">
+              <%= render article.categories %>
+            </div>
+          <% end %>
         </div>
+
+
+
         <div class="card-body">
           <h5 class="card-title"><%= link_to article.title, article_path(article) %></h5>
           <p class="card-text"><%= truncate(article.description, length: 100) %></p>
@@ -15,13 +24,13 @@
             <%= link_to 'Delete', article_path(article), class: 'btn btn-danger btn-sm', data: { turbo_method: :delete, turbo_confirm: "Are you sure?" } %>
           <% end %>
         </div>
-        
+
         <div class="card-footer text-muted">
             <small>Created <%= time_ago_in_words(article.created_at) %> ago,
                   last updated: <%= time_ago_in_words(article.updated_at) %> ago
-            </small>  
+            </small>
         </div>
-       
+
       </div>
     </div>
   </div>
