--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  
+
 <%= render 'shared/errors', obj: @article %>
 
 <%= form_with model: @article do |form| %>
@@ -11,6 +11,14 @@
   <div class="mb-3">
     <%= form.label :description, class: 'form-label'  %>
     <%= form.text_area :description, class: 'form-control' %>
+  </div>
+
+  <div class="mb-3">
+    <%= form.label :category, class: 'form-label'  %>
+    <%= form.collection_select :category_ids, Category.all, :id, :name,
+      { prompt: 'Choose one or more categories related to the article (can be empty)' },
+      { multiple: true, class: 'form-select', size: 3 }
+    %>
   </div>
 
   <p><%= form.submit 'Save', class: 'btn btn-primary' %></p>
