--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,14 +1,16 @@
 <div class="container">
   <h1>List of Articles</h1>
 
-  <p><%= link_to 'Create New Article', new_article_path, class: 'btn btn-primary' %></p>
+  <% if logged_in? %>
 
+    <p><%= link_to 'Create New Article', new_article_path, class: 'btn btn-primary' %></p>
+  <% end %>
   <div class="flickr_pagination mb-4">
     <%= will_paginate  @articles, :container => false %>
   </div>
-  
+
   <%= render 'article' %>
-  
+
   <div class="flickr_pagination">
     <%= will_paginate  @articles, :container => false %>
   </div>
