--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -10,6 +10,13 @@
         <%= image_tag('/giphy.webp', alt: 'giphy', class: 'shadow rounded-circle ', height: '60', width: '60')%>
       <% end %>
     </div>
+
+    <% if @article.categories.any?%>
+      <div class="text-center ">
+        <%= render @article.categories %>
+      </div>
+    <% end %>
+
     <div class="card-body">
       <h5 class="card-title"><%= @article.title %></h5>
       <p class="card-text"><%= @article.description %></p>
