--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -15,6 +15,8 @@
               <%= link_to category.name, category_path(category) %>
             </h5>
 
+            <p class="card-text"><%= pluralize(category.articles.count, "article") %></p>
+
           </div>
 
           <div class="card-footer text-muted">
