--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -3,5 +3,35 @@
     <div class="text-center my-2">
       <h1> Category: <%= @category.name %></h1>
     </div>
+
+
+
+    <div class="text-center my-4">
+      <% if logged_in? && current_user.admin? %>
+        <%= link_to 'Edit category name', edit_category_path(@category), class: 'btn btn-secondary btn-sm' %>
+      <% end %>
+    </div>
+
+
+    <div class="text-center my-2">
+      <h3>Articles</h3>
+    </div>
+
+    <div class="flickr_pagination my-4">
+      <%= will_paginate  @articles, :container => false %>
+    </div>
+
+    <div class="text-center">
+      <%= render 'articles/article' %>
+    </div>
+
+    <div class="flickr_pagination mb-4">
+      <%= will_paginate  @articles, :container => false %>
+    </div>
+
+    <div class="text-center mb-4">
+      <%= link_to 'Return to categories', categories_path, class: 'btn btn-outline-secondary' %>
+    </div>
   </div>
+
 </div>
